# compod

./: .gitignore  LICENSE  README.md  install.sh  setup.py
.github/workflows/: build.yml
abspy/: complex.py  export_complex.py  graph.py  logger.py  primitive.py  setup.py
compocity/: extract_planes.py  reconstruct.py
compose/: CMakeLists.txt  log.txt  pyproject.toml
compose/include/: boost_typedefs.h  cdt.h  cgal_typedefs.h  mesh.h  pdse.h  plane.h  pypdl.h  pypdse.h  region_growing.h
compose/src/: cdt.cpp  main.cpp  mesh.cpp  pdse.cpp  plane.cpp  pypdl.cpp  pypdse.cpp  region_growing.h
compose/src/pycompose/: __init__.py
example/: bunny.py  city.py  example.py  tfun.py
example/data/anchor/convexes_refined/: file.npz  file.ply  file_merged.ply
example/data/anchor/in_cells/: file.ply
example/data/anchor/partition/: cells.pickle  file.ply  graph.pickle  groups.pickle  occupancies.npz  tree.pickle  tree_simplified_partition.ply
example/data/anchor/polygon_mesh/: file.off
example/data/anchor/surface/: complex_mesh.ply  polygon_mesh.mtl  triangle_mesh.ply
example/data/anchor/triangle_mesh/: file.off
example/data/bunny/convexes_detected/: file.ply
example/data/bunny/convexes_refined/: file.ply  file_merged.ply
example/data/bunny/in_cells/: file.ply
example/data/bunny/partition/: cells.pickle  file.ply  groups.pickle  tree.pickle
example/data/bunny/polygon_mesh/: file.off
example/data/bunny/surface/: complex_mesh.ply  triangle_mesh.ply
example/data/bunny/triangle_mesh/: file.off
example/data/sphere/convexes_refined/: sphere-100K_planar_primitives_detection.ply  sphere-100K_planar_primitives_detection_merged.ply
example/data/sphere/partition/: cells.pickle  graph.pickle  tree.pickle  tree_simplified_partition.ply
example/data/sphere/surface/: complex_mesh.ply  polygon_mesh.ply  triangle_mesh.ply
pf/: CPP_DIR.txt  plane.py
pycompod/: __init__.py  complex.py  export_complex.py  export_plane.py  graph.py  imports.py  logger.py  plane.py  plane2.py  primitive.py  ridge_regression.py  vg.py
src/: __init__.py  export_complex.py  graph.py
tests/: test_combined.py
