[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]

build-backend = "scikit_build_core.build"

[project]
name = "pycompose"
version = "0.0.1"
description = "Surface extraction from a polyhedral decomposition"
requires-python = ">=3.8"
authors = [
    { name = "Raphael Sulzer", email = "raphaelsulzer@gmx.de" },
]

[project.urls]
Homepage = "https://github.com/raphaelsulzer/compod"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"
# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 3

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"